<resources>
    <string name="app_name">Binary Cash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_deposit">Deposit</string>
    <string name="menu_withdraw">Withdraw</string>
    <string name="menu_my_accounts">My Accounts</string>
    <string name="menu_transactions">Transactions</string>
    <string name="menu_edit_info">Edit</string>
    <string name="menu_support">Support</string>
    <string name="menu_logout">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>